hphp/hack/test/typecheck/constructor_method_call.php
<?hh

class A {
  public function foo(): void {
  }
}

function main(): void {
  new A()->foo();
}
